home section completed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 
     </header>
     <!--------------------Header Section End-------------------->
+
+    <!--------------------Home Section Start-------------------->
+    <section class="home" id="home">
+        <div class="content">
+            <p class="hello">hi there!</p>
+        <h1 class="name">i'm <span>mahmudul hasan</span></h1>
+        <p class="sub">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, doloribus. Quisquam ipsam perspiciatis nemo in, amet id iste unde laudantium omnis adipisci vero laboriosam molestias.</p>
+        <a href="" class="btn">about me</a>
+        </div>
+
+    </section>
+    <!--------------------Home Section End-------------------->
     
 
 
